--- a/lighthouse-core/lib/locales/en-XA.json
+++ b/lighthouse-core/lib/locales/en-XA.json
@@ -1,29 +1,47 @@
 {
-  "lighthouse-core/audits/byte-efficiency/render-blocking-resources.js!#title": {
+  "lighthouse-core/audits/byte-efficiency/render-blocking-resources.js | title": {
     "message": "Êĺîḿîńât́ê ŕêńd̂ér̂-b́l̂óĉḱîńĝ ŕêśôúr̂ćêś"
   },
-  "lighthouse-core/audits/byte-efficiency/render-blocking-resources.js!#description": {
+  "lighthouse-core/audits/byte-efficiency/render-blocking-resources.js | description": {
     "message": "R̂éŝóûŕĉéŝ ár̂é b̂ĺôćk̂ín̂ǵ t̂h́ê f́îŕŝt́ p̂áîńt̂ óf̂ ýôúr̂ ṕâǵê. Ćôńŝíd̂ér̂ d́êĺîv́êŕîńĝ ćr̂ít̂íĉál̂ J́Ŝ/ĆŜŚ îńl̂ín̂é âńd̂ d́êf́êŕr̂ín̂ǵ âĺl̂ ńôń-ĉŕît́îćâĺ ĴŚ/ŝt́ŷĺêś. [L̂éâŕn̂ ḿôŕê](h́t̂t́p̂ś://d̂év̂él̂óp̂ér̂ś.ĝóôǵl̂é.ĉóm̂/ẃêb́/t̂óôĺŝ/ĺîǵĥt́ĥóûśê/áûd́ît́ŝ/b́l̂óĉḱîńĝ-ŕêśôúr̂ćêś)."
   },
-  "lighthouse-core/audits/byte-efficiency/render-blocking-resources.js!#displayValue": {
-    "message": "{itemCount, plural,\n    one {1 resource}\n    other {# resources}\n    } d̂él̂áŷéd̂ f́îŕŝt́ p̂áîńt̂ b́ŷ {timeInMs, number, milliseconds} ḿŝ"
-  },
-  "lighthouse-core/audits/metrics/interactive.js!#title": {
+  "lighthouse-core/audits/metrics/interactive.js | title": {
     "message": "T̂ím̂é t̂ó Îńt̂ér̂áĉt́îv́ê"
   },
-  "lighthouse-core/audits/metrics/interactive.js!#description": {
+  "lighthouse-core/audits/metrics/interactive.js | description": {
     "message": "Îńt̂ér̂áĉt́îv́ê ḿâŕk̂ś t̂h́ê t́îḿê át̂ ẃĥíĉh́ t̂h́ê ṕâǵê íŝ f́ûĺl̂ý îńt̂ér̂áĉt́îv́ê. [Ĺêár̂ń m̂ór̂é](ĥt́t̂ṕŝ://d́êv́êĺôṕêŕŝ.ǵôóĝĺê.ćôḿ/ŵéb̂/t́ôól̂ś/l̂íĝh́t̂h́ôúŝé/âúd̂ít̂ś/ĉón̂śîśt̂én̂t́l̂ý-îńt̂ér̂áĉt́îv́ê)."
   },
-  "lighthouse-core/lib/i18n.js!#ms": {
+  "lighthouse-core/config/default-config.js | performanceCategoryTitle": {
+    "message": "P̂ér̂f́ôŕm̂án̂ćê"
+  },
+  "lighthouse-core/config/default-config.js | metricGroupTitle": {
+    "message": "M̂ét̂ŕîćŝ"
+  },
+  "lighthouse-core/config/default-config.js | loadOpportunitiesGroupTitle": {
+    "message": "Ôṕp̂ór̂t́ûńît́îéŝ"
+  },
+  "lighthouse-core/config/default-config.js | loadOpportunitiesGroupDescription": {
+    "message": "T̂h́êśê ár̂é ôṕp̂ór̂t́ûńît́îéŝ t́ô śp̂éêd́ ûṕ ŷóûŕ âṕp̂ĺîćât́îón̂ b́ŷ óp̂t́îḿîźîńĝ t́ĥé f̂ól̂ĺôẃîńĝ ŕêśôúr̂ćêś."
+  },
+  "lighthouse-core/config/default-config.js | diagnosticsGroupTitle": {
+    "message": "D̂íâǵn̂óŝt́îćŝ"
+  },
+  "lighthouse-core/config/default-config.js | diagnosticsGroupDescription": {
+    "message": "M̂ór̂é îńf̂ór̂ḿât́îón̂ áb̂óût́ t̂h́ê ṕêŕf̂ór̂ḿâńĉé ôf́ ŷóûŕ âṕp̂ĺîćât́îón̂."
+  },
+  "lighthouse-core/lib/i18n.js | ms": {
     "message": "{timeInMs, number, milliseconds} m̂ś"
   },
-  "lighthouse-core/lib/i18n.js!#columnURL": {
+  "lighthouse-core/lib/i18n.js | columnURL": {
     "message": "ÛŔL̂"
   },
-  "lighthouse-core/lib/i18n.js!#columnSize": {
+  "lighthouse-core/lib/i18n.js | columnSize": {
     "message": "Ŝíẑé (K̂B́)"
   },
-  "lighthouse-core/lib/i18n.js!#columnWastedTime": {
+  "lighthouse-core/lib/i18n.js | columnWastedMs": {
     "message": "P̂ót̂én̂t́îál̂ Śâv́îńĝś (m̂ś)"
+  },
+  "lighthouse-core/lib/i18n.js | displayValueWastedMs": {
+    "message": "P̂ót̂én̂t́îál̂ śâv́îńĝś ôf́ {wastedMs, number, milliseconds} m̂ś"
   }
 }
