--- a/lighthouse-core/lib/locales/en-US.json
+++ b/lighthouse-core/lib/locales/en-US.json
@@ -50,7 +50,8 @@
     "message": "Large network payloads cost users real money and are highly correlated with long load times. [Learn more](https://developers.google.com/web/tools/lighthouse/audits/network-payloads)."
   },
   "lighthouse-core/audits/byte-efficiency/total-byte-weight.js | displayValue": {
-    "message": "Total size was {totalBytes, number, bytes} KB"
+    "message": "Total size was {totalBytes, number, bytes} KB",
+    "description": "[ICU Syntax] Used to summarize the total byte size of the page and all its network requests"
   },
   "lighthouse-core/audits/byte-efficiency/unminified-css.js | title": {
     "message": "Minify CSS"
@@ -220,7 +221,8 @@
     "message": "Time To First Byte identifies the time at which your server sends a response. [Learn more](https://developers.google.com/web/tools/lighthouse/audits/ttfb)."
   },
   "lighthouse-core/audits/time-to-first-byte.js | displayValue": {
-    "message": "Root document took {timeInMs, number, milliseconds} ms"
+    "message": "Root document took {timeInMs, number, milliseconds} ms",
+    "description": "[ICU Syntax] Used to summarize the total Time to First Byte duration for the primary HTML response"
   },
   "lighthouse-core/audits/user-timings.js | title": {
     "message": "User Timing marks and measures"
@@ -263,15 +265,15 @@
   },
   "lighthouse-core/lib/i18n.js | ms": {
     "message": "{timeInMs, number, milliseconds} ms",
-    "description": "Used to show the duration in milliseconds that something lasted"
+    "description": "[ICU Syntax] Used to show the duration in milliseconds that something lasted"
   },
   "lighthouse-core/lib/i18n.js | displayValueByteSavings": {
     "message": "Potential savings of {wastedBytes, number, bytes} KB",
-    "description": "Used to show how many bytes the user could reduce their page by if they implemented the suggestions"
+    "description": "[ICU Syntax] Used to show how many bytes the user could reduce their page by if they implemented the suggestions"
   },
   "lighthouse-core/lib/i18n.js | displayValueMsSavings": {
     "message": "Potential savings of {wastedMs, number, milliseconds} ms",
-    "description": "Used to show how many milliseconds the user could reduce page load by if they implemented the suggestions"
+    "description": "[ICU Syntax] Used to show how many milliseconds the user could reduce page load by if they implemented the suggestions"
   },
   "lighthouse-core/lib/i18n.js | columnURL": {
     "message": "URL",
